QmlJSEditor: Show warning if opened QML/JS file is not in any project

Task-number: QTCREATORBUG-27173
Change-Id: I827275b8c77c4512f79bfc061a825dcf585a2d2a